# number-plate-ocr

./: .gitattributes  .gitignore  .main.py.swp  README.md  anpr.py  crop_images.py  gemini_api_transcriber.py  main.py  pyproject.toml  server.py
anpr/: __init__.py  anpr.py  classify.py  detect.py  ocr.py  utils.py
fine_tuning/: crop_plates.py  filter_valid_plates.py  gemini_api_transcriber.py  make_box_files.py  train_split.py  train_tesseract.py
training/: clean_images.py  gemini-labels.py  train_YOLO.py
training/dataset/bike/: README.dataset.txt  README.roboflow.txt  data.yaml
training/dataset/bike/test/labels/: 11_Front_png.rf.f6b81ff33dcc6fb36569bf986dfe9b9d.txt  1341341341_jpeg.rf.ade32c55cd1d3193b2796a71b40f5de6.txt  14_Front_png.rf.93ef3fc1c1ccfdd115bacab5f471defc.txt  19_Front_png.rf.ec4d216736f993768c34ff3698b08d81.txt  2_Back_png.rf.4634baae46e26cb965434947e6837c5c.txt  Screenshot-2023-11-17-211449_png.rf.67d54d84a406ab2eca6f127fe4465796.txt  Screenshot-2023-11-17-211621_png.rf.626747c807d37df6b0ae9a43329809e9.txt  (+3 more)
training/dataset/car/labels/: 000001.txt  000002.txt  000003.txt  000004.txt  000005.txt  000006.txt  000007.txt  000008.txt  000009.txt  000010.txt  000011.txt  000012.txt  000013.txt  000014.txt  000015.txt  000016.txt  000017.txt  000018.txt  000019.txt  000020.txt  000021.txt  000022.txt  000023.txt  000024.txt  000025.txt  000026.txt  000027.txt  000028.txt  000029.txt  000031.txt  000032.txt  000033.txt  000034.txt  000035.txt  000036.txt  000037.txt  000038.txt  000039.txt  000041.txt  000042.txt  (+1915 more)
(+175 files in other folders)
