[project]
name = "ocr"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi>=0.119.0",
    "google-genai>=1.33.0",
    "opencv-python>=4.12.0.88",
    "pytesseract>=0.3.13",
    "ultralytics>=8.3.201",
    "uvicorn>=0.37.0",
]
